# dipper

./: .dockerignore  .editorconfig  .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dipper-cli  README.md  create_migrations_links.sh  docker-compose.yml  iata_data.csv  justfile  mypy.ini  pyproject.toml  pytest.ini  release-notes.md  requirements.txt  rustfmt.toml  tmplaset.env
.config/: nextest.toml
.github/: pre-commit-config.yaml  (+1 more)
crates/dipper/: Cargo.toml  build.rs
crates/dipper-common/: Cargo.toml
crates/dipper-common/src/: db.rs  indexer_selection.rs  lib.rs  models.rs  network_subgraph.rs
crates/dipper-indexer-client/: Cargo.toml
crates/dipper-pgmq/: Cargo.toml
crates/dipper-pgmq/.sqlx/: query-dac19ebf41ea1a9539213a2aa41208e7d6b06b37930f9d3344e6a3c3396198d6.json
crates/dipper-pgmq/migrations/: 20241024135033_pgmq_init.sql
crates/dipper-pgmq/src/: lib.rs  postgres.rs  queue.rs
crates/dipper/src/: indexer_selection.rs  indexers.rs  lib.rs  models.rs  network.rs
crates/dipper/src/indexer_selection/: iisa.rs  logging.rs  service.rs
crates/dipper/src/indexer_selection/iisa/: bq.rs  data_manager.rs  geoip.rs  network.rs
crates/dipper/src/indexer_selection/iisa/tests/: common.rs  it_iisa_bq.rs  it_iisa_data_manager.rs  it_iisa_geoip.rs  it_iisa_network.rs
crates/dipper/src/indexers/: indexing_progress.rs  payments.rs
crates/dipper/src/network/: service.rs  subgraph.rs
crates/dipper/src/network/indexers/: urls.rs
crates/dipper/src/network/subgraph/: snapshot.rs
crates/dipper/src/network/subgraph/client/: queries.rs
crates/dipper/src/network/subgraph/client/tests/: it_subgraph_paginated_client.rs
dipper-core/: Cargo.toml
dipper-core/src/: api.rs  config.rs  fake.rs  ids.rs  lib.rs  rpc.rs  signed_message.rs  signed_message_serde.rs  state.rs  time.rs
dipper-core/src/api/: admin.rs
dipper-core/src/rpc/: indexing_agreements.rs  indexing_requests.rs
dipper-core/src/signed_message/: message.rs  serde.rs  signing.rs
dipper-iisa/: Cargo.toml  README.md  build.rs
dipper-iisa/src/: api.rs  fallback.rs  http_client.rs  indexer_client.rs  lib.rs  service.rs
dipper-iisa/src/py/: iisa.rs  logging.rs
dipper-iisa/src/py/iisa/: bq.rs  data_manager.rs  geoip.rs  network.rs  select.rs
dipper-iisa/src/py/iisa/tests/: common.rs  it_iisa_bq.rs  it_iisa_geoip.rs  it_iisa_network.rs  it_iisa_select.rs
dipper-pgmq/: Cargo.toml
dipper-pgmq/.sqlx/: query-3ff1bcc4d88089a84a89e70e1bb88bf4f9c51794d33043f8b98074d72638de39.json  query-62cd8673a4b14b85b3b60e97aae270a43e4bb05a45e1a263dea78568162d0b7a.json  query-8d021ff97de6451913e05eb2a6f567a267350d92595ef5c80126619c1e19d77b.json  query-e4084277439fa20bb6c2f20cddc7d4cdb3ed668003fbca09d4a33137414a3023.json  query-ec7ae37140e36deb9bf3482d12f2d4c82e70205bb2fe962b7ce51987850af5a1.json
dipper-pgmq/migrations/: 20241024135033_pgmq_init.sql  20260625000000_pop_order_by_created_at.sql  20260707000000_add_job_priority.sql
dipper-pgmq/src/: id.rs  job.rs  lib.rs  listener.rs  postgres.rs  queue.rs
dipper-pgmq/src/queue/: postgres.rs
dipper-pgmq/tests/: it_pgmq_postgres.rs
dipper-pgregistry/: Cargo.toml
dipper-pgregistry/migrations/: 20241030232440_dipper_reg_init.sql  20260113000000_add_agreements_indexer_status_index.sql  20260114045426_add_blocklist_table.sql  20260114045426_add_indexer_denylist_table.sql  20260123000000_enhance_indexer_denylist.sql  20260205000000_add_num_candidates_to_indexing_requests.sql  20260206000000_add_accepted_on_chain_status.sql  20260206100000_remove_accepted_rejected_statuses.sql  20260207000000_migrate_voucher_to_rca.sql  20260213000000_add_chain_listener_state.sql  20260214000000_add_deadline_index.sql  20260218000000_liveness_tracking.sql  20260220000000_add_rejection_reason.sql  20260318000000_add_pending_cancellations.sql  20260319000000_add_block_timestamp_to_chain_listener_state.sql  20260331000000_add_on_chain_id_to_agreements.sql  20260402000000_agreement_on_chain_id_primary_key.sql  20260408000000_rename_voucher_to_terms.sql  20260413000000_add_offer_tx_hash.sql  20260430000000_add_last_processed_id_to_chain_listener_state.sql  20260512000000_unique_open_indexing_requests.sql  20260512000001_drop_pending_cancellations_indexing_request_id.sql  20260616000000_add_terms_version_hash.sql  20260706000000_add_event_emission_tracking.sql  20260708000000_add_created_by_indexer_index.sql  20260708000001_drop_indexing_receipts.sql
dipper-pgregistry/src/: blocklist.rs  indexer_denylist.rs  indexing_agreement.rs  indexing_receipt.rs  indexing_request.rs  lib.rs  postgres.rs  result.rs
dipper-pgregistry/src/postgres/: common.rs  indexing_agreement.rs  indexing_receipt.rs  indexing_request.rs
dipper-pgregistry/tests/: it_registry_postgres.rs
dipper-pgregistry/tests/fixtures/: 0001_indexing_requests.sql  0002_indexing_agreements.sql  0003_multi_indexer_agreements.sql  0004_reassessment_requests.sql
dipper-producer/: Cargo.toml  README.md  build.rs
dipper-producer/proto/: indexing-agreement-events.proto
dipper-producer/src/: events.rs  kafka.rs  lib.rs
dipper-producer/src/events/: subgraph_indexing_agreements_events_emitter.rs
dipper-producer/src/kafka/: producer.rs
dipper-producer/src/proto/: dipper.subgraph.indexing.agreement.events.v1.rs  mod.rs
dipper-registry/: Cargo.toml  build.rs
dipper-registry/migrations/: 20241030232440_dipper_reg_init.sql
dipper-registry/src/: api.rs  indexing_agreement.rs  indexing_receipt.rs  indexing_request.rs  lib.rs  postgres.rs
dipper-registry/src/postgres/: common.rs  indexing_agreement.rs  indexing_receipt.rs
dipper-registry/tests/: it_registry_postgres.rs
dipper-registry/tests/fixtures/: 0002_indexing_agreements.sql
dipper-rpc/: Cargo.toml  build.rs
dipper-rpc/proto/: dips.proto  gateway.proto  indexer.proto
dipper-rpc/src/: admin.rs  indexer.rs  lib.rs
dipper-rpc/src/admin/: blocklist.rs  indexing_agreements.rs  indexing_requests.rs  message.rs
dipper-rpc/src/indexer/: gateway_server.rs  indexer_client.rs
dipper-rpc/src/proto/: graphprotocol.indexer.dips.rs
(+94 files in other folders)
