[workspace]
resolver = "2"
members = [
    "bin/dipper-cli",
    "bin/dipper-service",
    "dipper-core",
    "dipper-iisa",
    "dipper-indexer-client",
    "dipper-pgmq",
    "dipper-registry",
    "integration-tests",
    "xtask"
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12"
sqlx = { version = "0.8.2", features = ["postgres", "time", "uuid"] }
thegraph-core = { version = "0.7.0", default-features = false }
thiserror = "2.0"
time = "0.3"
tokio = { version = "1.40", default-features = false }
tracing = "0.1"
url = "2.5"
uuid = { version = "1.11.0", features = ["v7"] }
