[project]
name = "iisa"
version = "0.1.0"
readme = "dipper-iisa-python/README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "faker>=37,<37.9",
    "find-libpython>=0.4,<0.5",
    "mypy>=1.11.2,<2.0",
    "pytest>=8.3.2,<9.0",
    "ruff>=0.11,<0.12",
]

## ruff configuration
[tool.ruff]
include = [
    "pyproject.toml",
    "dipper-iisa-python/**/*.py",
]

## mypy configuration
[tool.mypy]
files = [
    # Check only the source code
    "dipper-iisa-python/src/**/*.py",
]
exclude = [
    "tests/",
    'test_.*\.py$',
    '_test\.py$',
]

# pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "dipper-iisa-python/tests"
]


# hatchling configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "dipper-iisa-python/src/iisa",
]
exclude = [
    "dipper-iisa-python/tests/",
]

[tool.hatch.build.targets.wheel]
packages = ["dipper-iisa-python/src/iisa"]
