[package]
name = "dipper-core"
version = "0.1.0"
edition = "2021"

[features]
fake = ["dep:fake", "thegraph-core/fake"]
serde = ["dep:serde", "dep:serde_with", "thegraph-core/serde", "uuid/serde"]
sqlx = ["dep:sqlx"]

[dependencies]
fake = { version = "4.0.0", optional = true, features = ["uuid"] }
serde = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true, features = ["base64"] }
sqlx = { workspace = true, optional = true }
thegraph-core = { workspace = true, features = ["alloy-eip712", "alloy-signers", "alloy-sol-types"] }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
thegraph-core = { workspace = true, features = ["alloy-signer-local"] }
