[package]
name = "dipper-iisa"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
rand = "0.9.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thegraph-core.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
fake = "4.0.0"
thegraph-core = { workspace = true, features = ["fake"] }
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wiremock = "0.6"
