[package]
name = "dipper-pgmq"
description = "A simple PostgreSQL-backed message queue"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio"] }
time.workspace = true
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
fake = "4.0.0"
test-with = "0.14.7"
tokio = { workspace = true, features = ["macros", "test-util"] }
