[package]
name = "dipper-pgmq"
description = "A simple PostgreSQL-backed message queue"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio"] }
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
fake.workspace = true
pgtemp = "0.6.0"
tokio = { workspace = true, features = ["macros", "test-util"] }
