[package]
name = "dipper-pgregistry"
version = "0.1.0"
edition = "2024"

[features]
default = []
fake = ["dep:fake", "dipper-core/fake"]

[dependencies]
dipper-core = { version = "0.1.0", path = "../dipper-core", features = ["sqlx"] }
fake = { workspace = true, optional = true, features = ["url"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
sqlx = { workspace = true, features = ["runtime-tokio"] }
thegraph-core.workspace = true
thiserror.workspace = true
time.workspace = true
url.workspace = true

[dev-dependencies]
dipper-core = { path = "../dipper-core" }
fake = { workspace = true, features = ["url"] }
test-with = { version = "0.14.4", default-features = false }
thegraph-core = { workspace = true, features = ["fake"] }
uuid.workspace = true
