[package]
name = "dipper-pgregistry"
version = "0.1.0"
edition = "2024"

[features]
default = []
fake = ["dep:fake", "dipper-core/fake"]

[dependencies]
dipper-core = { version = "0.1.0", path = "../dipper-core", features = ["sqlx"] }
fake = { workspace = true, optional = true, features = ["url"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio"] }
thegraph-core = { workspace = true, features = ["serde"] }
thiserror.workspace = true
time = { workspace = true, features = ["serde"] }
url.workspace = true

[dev-dependencies]
dipper-core = { path = "../dipper-core" }
fake = { workspace = true, features = ["url"] }
pgtemp = "0.6.0"
thegraph-core = { workspace = true, features = ["fake"] }
tokio = { workspace = true, features = ["macros", "test-util"] }
uuid.workspace = true
