[package]
name = "dipper-rpc"
version = "0.1.0"
edition = "2024"

[dependencies]
dipper-core = { version = "0.1.0", path = "../dipper-core", features = ["serde"] }
indexer-dips = { git = "https://github.com/graphprotocol/indexer-rs.git", rev = "6c01c03", default-features = false, features = ["rpc"] }
jsonrpsee = { workspace = true, features = ["client", "macros", "server"] }
serde.workspace = true
serde_with.workspace = true
thegraph-core = { workspace = true, features = ["alloy-dyn-abi", "alloy-eip712", "alloy-signers", "alloy-sol-types", "serde", "signed-message"] }
time = { workspace = true, features = ["formatting", "parsing", "serde"] }
