[package]
name = "dipper-indexer-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
indoc = "2.0.5"
reqwest = { workspace = true, features = ["json"] }
semver = { version = "1.0.23", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
serde_with = "3.11.0"
thegraph-core.workspace = true
thegraph-graphql-http = { version = "0.2.4", features = ["http-client-reqwest"] }
thiserror.workspace = true
url.workspace = true
