[package]
name = "dipper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
indoc = "2.0.5"
log.workspace = true
pyo3 = "0.22.2"
reqwest = { workspace = true, features = ["json"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.125"
serde_with = "3.9.0"
thegraph-core = { version = "0.7.0", features = ["subgraph-client", "serde"] }
thegraph-graphql-http = "0.2.4"
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { version = "0.1.40", default-features = false }
tracing-log = "0.2.0"

[dev-dependencies]
smol-potat = "1.1.2"
tempfile.workspace = true
test-with = { version = "0.14.0", default-features = false }
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
