[package]
name = "dipper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
indoc = "2.0.5"
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1.0.125", features = ["raw_value"] }
serde_with = "3.9.0"
thegraph-core = { version = "0.7.0", features = ["serde"] }
thegraph-graphql-http = { version = "0.2.4", features = ["http-client-reqwest"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["time", "sync"] }
tracing.workspace = true

[dev-dependencies]
test-with = { version = "0.14.0", default-features = false }
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
